tooling/nargo_cli/tests/snapshots/execution_success/regression_3607/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: u32) {
    if x == 0 {
        x = (x + 1) / x;
    } else {
        x = (x + 1) / x;
    };
    assert(x != 0);
}
